@@ -26,7 +26,7 @@ import java.util.Map;
 
 public class InitializerTests extends ScriptTestCase {
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
+    @SuppressWarnings({"rawtypes"})
     public void testArrayInitializers() {
         int[] ints = (int[])exec("new int[] {}");
 
@@ -53,13 +53,13 @@ public class InitializerTests extends ScriptTestCase {
             "Object[] x = new Object[] {y, z, 1 + s, s + 'aaa'}; return x;");
 
         assertEquals(4, objects.length);
-        assertEquals(new Integer(2), objects[0]);
+        assertEquals(Integer.valueOf(2), objects[0]);
         assertEquals(new ArrayList(), objects[1]);
         assertEquals("1aaa", objects[2]);
         assertEquals("aaaaaa", objects[3]);
     }
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
+    @SuppressWarnings({"rawtypes"})
     public void testListInitializers() {
         List list = (List)exec("[]");
 
@@ -85,13 +85,13 @@ public class InitializerTests extends ScriptTestCase {
         list = (List)exec("int y = 2; List z = new ArrayList(); String s = 'aaa'; List x = [y, z, 1 + s, s + 'aaa']; return x;");
 
         assertEquals(4, list.size());
-        assertEquals(new Integer(2), list.get(0));
+        assertEquals(Integer.valueOf(2), list.get(0));
         assertEquals(new ArrayList(), list.get(1));
         assertEquals("1aaa",  list.get(2));
         assertEquals("aaaaaa", list.get(3));
     }
 
-    @SuppressWarnings({"unchecked", "rawtypes"})
+    @SuppressWarnings({"rawtypes"})
     public void testMapInitializers() {
         Map map = (Map)exec("[:]");
 
@@ -100,15 +100,15 @@ public class InitializerTests extends ScriptTestCase {
         map = (Map)exec("[5 : 7, -1 : 14]");
 
         assertEquals(2, map.size());
-        assertEquals(new Integer(7), map.get(5));
-        assertEquals(new Integer(14), map.get(-1));
+        assertEquals(Integer.valueOf(7), map.get(5));
+        assertEquals(Integer.valueOf(14), map.get(-1));
 
         map = (Map)exec("int y = 2; int z = 3; Map x = [y*z : y + z, y - z : y, z : z]; return x;");
 
         assertEquals(3, map.size());
-        assertEquals(new Integer(5), map.get(6));
-        assertEquals(new Integer(2), map.get(-1));
-        assertEquals(new Integer(3), map.get(3));
+        assertEquals(Integer.valueOf(5), map.get(6));
+        assertEquals(Integer.valueOf(2), map.get(-1));
+        assertEquals(Integer.valueOf(3), map.get(3));
 
         map = (Map)exec("int y = 2; List z = new ArrayList(); String s = 'aaa';" +
             "def x = [y : z, 1 + s : s + 'aaa']; return x;");
@@ -139,7 +139,7 @@ public class InitializerTests extends ScriptTestCase {
         list3.add(9);
 
         assertEquals(3, map.size());
-        assertEquals(new Integer(5), map.get(6));
+        assertEquals(Integer.valueOf(5), map.get(6));
         assertEquals(list2, map.get("s"));
         assertEquals(list3, map.get(3));
     }
